[package]
name = "ymcrust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
chrono = "0.4.38"






[[test]]
name = "io_test"
path = "src/tests/io_test.rs"

[[test]]
name = "math_test"
path = "src/tests/math_test.rs"

[[test]]
name = "string_test"
path = "src/tests/string_test.rs"

[[test]]
name = "date_test"
path = "src/tests/date_test.rs"

[[test]]
name = "file_test"
path = "src/tests/file_test.rs"



